argo-cd/clusters/lgsk8sp1/tooling/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istio-certs # This should match the Certificate secretName
    hosts:
    - diegoluisi.eti.br # This should match a DNS name in the Certificate
