argo-cd/clusters/lgsk8sp1/tooling/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argo-workflows
spec:
  gateways:
    - istio-gateway
  hosts:
    - argo-workflows.diegoluisi.eti.br
  http:
    - route:
      - destination:
          host: argo-server
          port:
            number: 2746
